#ui fix vertical align error when inline text occupies > 1 line

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -18,6 +18,7 @@
 }
 
 .card {
+	vertical-align: top;
 	margin-bottom: 4px;
 	width: 155px; /* = (container width - container padding * 2 - margin) / 2 */
 	height: 155px; /* = width */
